Closed Bug 575658 Opened 16 years ago Closed 15 years ago

[e10s] TabChild::ParamsToArrays string optimization

Categories

(Core :: IPC, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
Tracking Status
fennec - ---

People

(Reporter: dougt, Assigned: MikeK)

References

Details

Attachments

(1 file)

>+TabChild::ParamsToArrays(nsIDialogParamBlock* aParams, >+ PRUnichar* str = nsnull; >+ while (NS_SUCCEEDED(aParams->GetString(j, &str))) { >+ nsAdoptingString strVal(str); Why not just make strVal an nsXPIDLString and use getter_Copies and skip the |str| temporary?
tracking-fennec: --- → ?
wont block fennec for this.
tracking-fennec: ? → 2.0-
Attached patch Like this?Splinter Review
Attachment #485270 - Flags: feedback?(doug.turner)
Assignee: nobody → mkristoffersen
Attachment #485270 - Flags: feedback?(doug.turner) → review?(doug.turner)
Comment on attachment 485270 [details] [diff] [review] Like this? what bz asked for. low risk, e10s -> mc fallout
Attachment #485270 - Flags: review?(doug.turner)
Attachment #485270 - Flags: review+
Attachment #485270 - Flags: approval2.0+
Keywords: checkin-needed
Status: NEW → ASSIGNED
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: