Bug 575658 - [e10s] TabChild::ParamsToArrays string optimization r=doug.turner a=approval2.0